tests/tooling/fixtures/native/execution/negative/extern_pure_missing_fn_keyword.objc3
module ExternPureMissingFnKeyword;

extern pure let value = 1;

fn main() -> i32 {
  return value;
}
